# TogoSpaceFrontend

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
apps/desktop/: .env  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  api.ts  desktop.ts  i18n.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  tauri-client-checklist.md  tauri-client-spec.md  tauri-client-tasks.md
scripts/: build-desktop.sh  dev-desktop.sh  setup-togospace-submodule.sh
src/: App.vue  api.ts  appUiState.ts  types.ts  utils.ts
src/__tests__/: api.test.ts
src/components/agent/: AgentActivityDialog.vue  AgentActivityDialogShell.vue  AgentActivityItem.vue  AgentActivityPanel.vue  AgentCardBase.vue  AgentPropertiesPanel.vue  AgentTaskCard.vue  AgentTaskPanel.vue
src/components/chat/: ChatPanel.vue  MessageStream.vue
src/components/console/: ConsoleChatPanel.vue  ConsoleTaskTreeNode.vue  ConsoleTaskTreePanel.vue  CreateRoomDialog.vue  RoomListSection.vue  RoomSettingsDialog.vue
src/components/layout/: QuickInitModal.vue  TopBar.vue
src/composables/: useMemberEditorDialog.ts  useSettingsRouting.ts  useSettingsTeamMutations.ts
src/locales/: en.json  zh-CN.json
src/pages/: ConsolePage.vue  SettingsPage.vue  TeamCreatePage.vue
src/realtime/: eventNormalizer.ts  runtimeStore.ts  selectors.ts
src/theme/: tokens.css
src/utils/: taskTree.ts
(+37 files in other folders)
